--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -99,10 +99,10 @@
     // TODO: Old unused kludge, remove from code
     "stop_threshold": 2.0,
      // blacklisted skills to not load
-    "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys"],
+    "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys", "service_face"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center", "service_objectives"],
-    "default_run_level" : "dev",
+    "default_run_level" : "full",
     "run_levels": {
         // core skills only
         "0":{
