--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -81,6 +81,10 @@
   "skills": {
     // Directory to look for user skills
     "directory": "~/.mycroft/skills",
+    // blacklisted skills to not load
+    "blacklisted_skills": ["send_sms", "media"],
+    // priority skills to be loaded first
+    "priority_skills": [],
     // TODO: Old unused kludge, remove from code
     "stop_threshold": 2.0
   },
