--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -102,7 +102,7 @@
     "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center", "service_objectives"],
-    "default_run_level" : "dev",
+    "default_run_level" : "restricted",
     "run_levels": {
         // core skills only
         "0":{
@@ -156,7 +156,7 @@
         // censor some skills (facebook client, dont allow desktop launcher)
         "restricted":{
             "type":"blacklist",
-            "skills":["service_face", "skill_desktop_launcher", "skill_mute", "skill_dictation", "service_display", "service_audio", "service_vision", "skill_audio_record", "LILACS_teach", "skill_configuration", "skill_pairing", "skill_diagnostics","skill_deep_dream", "skill_control_center", "skill_cmd", "skill_wallpaper", "skill_reminder", "skill_alarm", "skill_playback_control", "skill_naptime"]
+            "skills":["service_face", "skill_desktop_launcher", "skill_mute", "skill_dictation", "service_display", "service_audio", "service_vision", "skill_audio_record", "LILACS_teach", "skill_configuration", "skill_pairing", "skill_diagnostics", "skill_cmd", "skill_wallpaper", "skill_reminder", "skill_alarm", "skill_playback_control", "skill_naptime"]
         },
         // only skills you are working on, dont load unecessary skills for what you are testing
         "dev":{
