default run level full

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -85,7 +85,7 @@
     "blacklisted_skills": ["template_skill", "skill_facebook", "skill_twitter", "service_context", "service_sound_analisys", "browser_service", "service_face"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center", "service_objectives", "browser_service", "service_vision"],
-    "default_run_level" : "dev",
+    "default_run_level" : "full"",
     "run_levels": {
         // core skills only
         "0":{
