--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -1,13 +1,13 @@
 {
   // Definition and documentation of all variables used by mycroft-core.
-  // 
+  //
   // Settings seen here are considered DEFAULT.  Settings can also be
-  // overridden at the REMOTE level (set by the user via 
+  // overridden at the REMOTE level (set by the user via
   // https://home.mycroft.ai), at the SYSTEM level (typically in the file
   // '/etc/mycroft/mycroft.conf'), or at the USER level (typically in the
   // file '~/.mycroft/mycroft.conf').
   //
-  // The Override: comment indicates at what level (if any) this is 
+  // The Override: comment indicates at what level (if any) this is
   // overridden by the system to a value besides the default shown here.
 
   // Language used for speech-to-text and text-to-speech.
@@ -15,38 +15,38 @@
   // TODO: save unmodified, lowercase upon demand
   // Override: none
   "lang": "en-us",
-  
+
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
   "system_unit": "metric",
-  
+
   // Time format, either 'half' (e.g. "11:37 pm") or 'full' (e.g. "23:37")
   // Override: REMOTE
   "time_format": "half",
-  
+
   // Date format, either 'MDY' (e.g. "11-29-1978") or 'DMY' (e.g. "29-11-1978")
   // Override: REMOTE
   "date_format": "MDY",
-  
+
   // Play a beep when system begins to listen?
   // Override: none
   "confirm_listening": true,
-  
+
   // File locations of sounds to play for system events
   // Override: none
   "sounds": {
     "start_listening": "snd/start_listening.wav",
     "end_listening": "snd/end_listening.wav"
   },
-  
+
   // Mechanism used to play WAV audio files
   // Override: SYSTEM
   "play_wav_cmdline": "aplay %1",
-  
+
   // Mechanism used to play MP3 audio files
   // Override: SYSTEM
   "play_mp3_cmdline": "mpg123 %1",
-  
+
   // Location where the system resides
   // NOTE: Although this is set here, an Enclosure can override the value.
   //       For example a mycroft-core running in a car could use the GPS.
@@ -75,7 +75,7 @@
       "offset": -21600000
     }
   },
-  
+
   // General skill values
   // Override: none
   "skills": {
@@ -85,7 +85,7 @@
     "blacklisted_skills": ["template_skill", "skill_facebook", "skill_twitter", "service_context", "service_sound_analisys", "browser_service", "service_face"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center", "service_objectives", "browser_service", "service_vision"],
-    "default_run_level" : "full"",
+    "default_run_level" : "dev",
     "run_levels": {
         // core skills only
         "0":{
@@ -114,7 +114,7 @@
         }
     }
   },
-  
+
   // Address of the REMOTE server
   // Override: none
   "server": {
@@ -123,7 +123,7 @@
     "update": true,
     "metrics": false
   },
-  
+
   // The mycroft-core messagebus' websocket
   // Override: none
   "websocket": {
@@ -132,7 +132,7 @@
     "route": "/core",
     "ssl": false
   },
-  
+
   // Settings used by the wake-up-word listener
   // Override: REMOTE
   "listener": {
@@ -146,22 +146,22 @@
     "multiplier": 1.0,
     "energy_ratio": 1.5
   },
-  
+
   // Mark 1 enclosure settings
   // Override: SYSTEM (e.g. Picroft)
   "enclosure": {
     // Platform name (e.g. 'Picroft', 'Mark_1'
     // Override: SYSTEM (set by specific enclosures)
     # "platform": "picroft",
-    
+
     // COMM params to the Arduino/faceplate
     "port": "/dev/ttyAMA0",
     "rate": 9600,
     "timeout": 5.0,
-    
+
     // ??
     "update": true,
-    
+
     // Run a self test at bootup?
     "test": false
   },
@@ -169,7 +169,7 @@
   // Level of logs to store, one of  "CRITICAL", "ERROR", "WARNGIN", "INFO", "DEBUG"
   // Override: none
   "log_level": "DEBUG",
-  
+
   // Messagebus types that will NOT be output to logs
   // Override: none
   "ignore_logs": ["enclosure.mouth.viseme"],
