--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -16,6 +16,25 @@
   // Override: none
   "lang": "en-us",
 
+  // where to save stuff, like dreams and poems
+  "database_path" : "./database",
+
+  // API keys
+  "APIS": {
+    "WolframAlphaAPI": "key",
+    "WeatherAPI": "key",
+    "GraphAPI": "key",
+    "NASAAPI": "DEMO_KEY",
+    "GoogleTrafficAPI": "key",
+    "MashapeAPI": "key",
+    "WikimapiaAPI": "key",
+    "CloudsightAPI": "key",
+    "RedditAPI": "key",
+    "CloudsightSecret": "key",
+    "RedditSecret": "key",
+    "Wordnik":"key"
+  },
+
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
   "system_unit": "metric",
