--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -101,7 +101,7 @@
     // Directory to look for user skills
     "directory": "~/.mycroft/skills",
      // blacklisted skills to not load
-    "blacklisted_skills": ["service_image_recognition", "template_skill", "skill_facebook", "skill_twitter", "service_context", "service_sound_analisys", "service_browser", "service_face"],
+    "blacklisted_skills": [],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center", "service_objectives", "service_browser", "service_vision"],
     "default_run_level" : "full",
