--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -163,7 +163,9 @@
     "phoneme_duration": 120,
     "threshold": 1e-90,
     "multiplier": 1.0,
-    "energy_ratio": 1.5
+    "energy_ratio": 1.5,
+    "producer": "pocketsphinx",
+    "grammar": "lm"
   },
 
   // Mark 1 enclosure settings
