--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -223,7 +223,11 @@
     "espeak": {
       "lang": "english-us",
       "voice": "m1"
-    }
+    },
+    "module": "morse",
+      "morse":{
+        "time_step": 0.5
+      }
   },
 
   // =================================================================
