--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -157,7 +157,7 @@
   "listener": {
     "sample_rate": 16000,
     "channels": 1,
-    "record_wake_words": false,
+    "record_wake_words": true,
     "wake_word": "hey mycroft",
     "phonemes": "HH EY . M AY K R AO F T",
     "phoneme_duration": 120,
@@ -215,8 +215,8 @@
   // Text to Speech parameters
   // Override: REMOTE
   "tts": {
-    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay"
-    "module": "mimic",
+    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse"
+    "module": "morse",
     "mimic": {
       "voice": "ap"
     },
