--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -101,10 +101,15 @@
     // Directory to look for user skills
     "directory": "~/.mycroft/skills",
      // blacklisted skills to not load
-    "blacklisted_skills": ["skill_server_fallback"],
+    "blacklisted_skills": ["skill_server_fallback", "service_browser",
+    "service_vision", "LILACS_core", "LILACS_curiosity", "LILACS_storage",
+    "LILACS_users", "LILACS_teach", "service_deep_dream",
+    "service_image_recognition", "service_object_recognition",
+    "skill_twitter", "skill_facebook", "skill_instagram", "service_colorize",
+     "service_style_transfer"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center",
-    "service_objectives", "service_browser", "service_vision", "LILACS_core"],
+    "service_objectives", "LILACS_core"],
     "default_run_level" : "full",
     "run_levels": {
         // core skills only
