Change skill-wolfram-alpha to fallback-wolfram-alpha This is necessary because of the API breaking change

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -84,7 +84,7 @@
     // TODO: Old unused kludge, remove from code
     "stop_threshold": 2.0,
     // blacklisted skills to not load
-    "blacklisted_skills": ["skill-media", "send_sms"]
+    "blacklisted_skills": ["skill-media", "send_sms", "skill-wolfram-alpha"]
   },
   
   // Address of the REMOTE server
