--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -145,7 +145,7 @@
   "server": {
     "url": "https://api.mycroft.ai",
     "version": "v1",
-    "update": true,
+    "update": false,
     "metrics": false
   },
 
@@ -222,7 +222,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse"
-    "module": "morse",
+    "module": "mimic",
     "mimic": {
       "voice": "ap"
     },
