--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -102,14 +102,14 @@
     "directory": "~/.mycroft/skills",
      // blacklisted skills to not load
     "blacklisted_skills": ["skill_server_fallback", "service_browser",
-    "service_vision", "LILACS_core", "LILACS_curiosity", "LILACS_storage",
+    "service_vision", "LILACS_curiosity",
     "LILACS_users", "LILACS_teach", "service_deep_dream",
     "service_image_recognition", "service_object_recognition",
     "skill_twitter", "skill_facebook", "skill_instagram", "service_colorize",
-     "service_style_transfer"],
+     "service_style_transfer", "skill_aiml_chatbot"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center",
-    "service_objectives", "LILACS_core"],
+    "service_objectives", "LILACS_core", "LILACS_storage"],
     "default_run_level" : "full",
     "run_levels": {
         // core skills only
@@ -164,7 +164,7 @@
     "sample_rate": 16000,
     "channels": 1,
     "record_wake_words": true,
-    "wake_word": "hey mycroft",
+    "wake_word": "hey jarbas",
     "phonemes": "HH EY . M AY K R AO F T",
     "phoneme_duration": 120,
     "threshold": 1e-90,
@@ -222,7 +222,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse"
-    "module": "morse",
+    "module": "mimic",
     "mimic": {
       "voice": "ap"
     },
