easy stt change

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -212,7 +212,7 @@
     // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi"
     "module": "wit",
     "wit":{
-    "credential" : {"token": "4NTQ65D3HCFFIYVEMQZUI3FWCDXTISPL"}
+    "credential" : {"token": ""}
     },
     "google":{
     "credential" : {"token": ""}
