--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ imgurpython
 scipy
 tweepy
 python-dateutil==2.6.0
+git+https://github.com/forslund/pymimic.git
 autobahn
 twisted
 python-gnupg
@@ -71,3 +72,5 @@ pyspotlight
 aiml
 padatious==0.1.4
 urlfetch
+geopy
+tzwhere
