--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -234,6 +234,9 @@
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse"
     "module": "mimic",
+    "pymimic": {
+      "voice": "/your_path_to/mimic/voices/cmu_us_awb.flitevox"
+    },
     "mimic": {
       "voice": "ap"
     },
