--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -254,7 +254,32 @@
     "intent_cache": "~/.mycroft/intent_cache",
     "train_delay": 4
   },
-
+  "Audio": {
+    "backends": {
+      "local": {
+        "type": "mpg123",
+        "active": true
+      },
+      "vlc": {
+        "type": "vlc",
+        "active": true
+      }
+    },
+    "default-backend": "local"
+  },
+  "Displays": {
+    "backends": {
+      "local": {
+        "type": "webbrowser",
+        "active": true
+      },
+      "web browser": {
+        "type": "webbrowser",
+        "active": true
+      }
+    },
+    "default-backend": "local"
+  },
   // =================================================================
   // All of the follow are specific to particular skills and will soon
   // be removed from this file.
@@ -307,19 +332,6 @@
     "channels": 1
   },
   "SkillInstallerSkill": {
-  },
-  "Audio": {
-    "backends": {
-      "local": {
-        "type": "mpg123",
-        "active": true
-      },
-      "vlc": {
-        "type": "vlc",
-        "active": true
-      }
-    },
-    "default-backend": "local"
   },
   "TwitterSkill": {
     "consumer_key": "",
