--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -244,10 +244,10 @@
       "lang": "english-us",
       "voice": "m1"
     },
-    "module": "morse",
-      "morse":{
+    "morse":{
+        "voice": "recording"
         "time_step": 0.5
-      }
+    }
   },
 
   "padatious": {
