--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -106,7 +106,7 @@
     "LILACS_users", "LILACS_teach", "service_deep_dream",
     "service_image_recognition", "service_object_recognition",
     "skill_twitter", "skill_facebook", "skill_instagram", "service_colorize",
-     "service_style_transfer",
+     "service_style_transfer", "LILACS_core",
      "service_face_recognition"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center",
