--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -162,6 +162,17 @@
   // Settings used by the wake-up-word listener
   // Override: REMOTE
   "listener": {
+    // pocketsphinx or snowboy
+    //"module": "snowboy",
+    //"models": {
+    //    "computer": "path/to/model",
+    //    "mycroft": "path/to/model",
+    //    "jarbas": "path/to/model"
+    //}
+    //"wake_up_models": {
+    //    "wake up": "path/to/model"
+    //}
+    "module": "pocketsphinx",
     "sample_rate": 16000,
     "channels": 1,
     "record_wake_words": true,
@@ -170,7 +181,10 @@
     "phoneme_duration": 120,
     "threshold": 1e-90,
     "multiplier": 1.0,
-    "energy_ratio": 1.5
+    "energy_ratio": 1.5,
+    'standup_word': "wake up",
+    'standup_phonemes': "W EY K . AH P",
+    'standup_threshold': 1e-18
   },
 
   // Mark 1 enclosure settings
