--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -164,11 +164,13 @@
   "listener": {
     // pocketsphinx or snowboy
     //"module": "snowboy",
+    //"sensitivity": 0.5,
     //"models": {
     //    "computer": "path/to/model",
     //    "mycroft": "path/to/model",
     //    "jarbas": "path/to/model"
     //}
+    //"wake_up_sensitivity": 0.5,
     //"wake_up_models": {
     //    "wake up": "path/to/model"
     //}
