--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -164,17 +164,19 @@
   "listener": {
     // pocketsphinx or snowboy
     "module": "pocketsphinx",
+    "wake_up_module": "pocketsphinx",
     //"module": "snowboy",
+    //"wake_up_module": "snowboy",
     //"sensitivity": 0.5,
     //"models": {
     //    "computer": "path/to/model",
     //    "mycroft": "path/to/model",
     //    "jarbas": "path/to/model"
-    //}
+    //},
     //"wake_up_sensitivity": 0.5,
     //"wake_up_models": {
     //    "wake up": "path/to/model"
-    //}
+    //},
     "sample_rate": 16000,
     "channels": 1,
     "record_wake_words": true,
