hotword detector, no stt

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -165,6 +165,18 @@
     // pocketsphinx or snowboy
     "module": "pocketsphinx",
     "wake_up_module": "pocketsphinx",
+    "sample_rate": 16000,
+    "channels": 1,
+    "record_wake_words": true,
+    "wake_word": "hey jarbas",
+    "phonemes": "HH EY . JH AA R AH SH",
+    "phoneme_duration": 120,
+    "threshold": 1e-90,
+    "multiplier": 1.0,
+    "energy_ratio": 1.5,
+    'standup_word': "wake up",
+    'standup_phonemes': "W EY K . AH P",
+    'standup_threshold': 1e-18,
     //"module": "snowboy",
     //"wake_up_module": "snowboy",
     //"sensitivity": 0.5,
@@ -177,18 +189,79 @@
     //"wake_up_models": {
     //    "wake up": "path/to/model"
     //},
-    "sample_rate": 16000,
-    "channels": 1,
-    "record_wake_words": true,
-    "wake_word": "hey jarbas",
-    "phonemes": "HH EY . JH AA R AH SH",
-    "phoneme_duration": 120,
-    "threshold": 1e-90,
-    "multiplier": 1.0,
-    "energy_ratio": 1.5,
-    'standup_word': "wake up",
-    'standup_phonemes': "W EY K . AH P",
-    'standup_threshold': 1e-18
+    // check for these hot words before sending STT request
+    'hot_words':{
+
+        //"start": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "start": "path/to/model",
+        //              "engage": "path/to/model2",
+        //          }
+        //      }
+        //},
+        //"stop": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "stop": "path/to/model"
+        //          }
+        //      }
+        //},
+        //"yes": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "yes": "path/to/model",
+        //              "afirmative": "path/to/model2",
+        //          }
+        //      }
+        //},
+        //"no": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "no": "path/to/model",
+        //              "negative": "path/to/model2",
+        //          }
+        //      }
+        //},
+        //"play": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "play": "path/to/model"
+        //          }
+        //      }
+        //},
+        //"pause": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "pause": "path/to/model"
+        //          }
+        //      }
+        //},
+        //"reset": {
+        //    "module":"snowboy"
+        //    "data":{
+        //        "models": {
+        //              "reset": "path/to/model"
+        //          }
+        //      }
+        //},
+
+        //"start": {
+        //    "module":"pocketsphinx"
+        //    "data":{
+        //        "hot_word": "",
+        //        "phonemes": "",
+        //        "threshold": 1e-90
+        //    }
+        //    }
+        //}
+    }
   },
 
   // Mark 1 enclosure settings
