hotword detector, no stt

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -50,10 +50,11 @@
   // Play a beep when system begins to listen?
   // Override: none
   "confirm_listening": true,
-
+  "confirm_hotword": true,
   // File locations of sounds to play for system events
   // Override: none
   "sounds": {
+    "hotword": "snd/start_listening.wav",
     "start_listening": "snd/start_listening.wav",
     "end_listening": "snd/end_listening.wav"
   },
@@ -177,6 +178,7 @@
     'standup_word': "wake up",
     'standup_phonemes': "W EY K . AH P",
     'standup_threshold': 1e-18,
+
     //"module": "snowboy",
     //"wake_up_module": "snowboy",
     //"sensitivity": 0.5,
@@ -189,6 +191,7 @@
     //"wake_up_models": {
     //    "wake up": "path/to/model"
     //},
+
     // check for these hot words before sending STT request
     'hot_words':{
 
