--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -192,7 +192,9 @@
     //    "wake up": "path/to/model"
     //},
 
-    // check for these hot words before sending STT request
+    // search for these hot words
+    "listen_on_hotword": false, // treat all hot words as wakewords
+    "utterance_on_hotword": false, // treat hot words as full utterances
     'hot_words':{
 
         //"start": {
