--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -50,11 +50,9 @@
   // Play a beep when system begins to listen?
   // Override: none
   "confirm_listening": true,
-  "confirm_hotword": true,
   // File locations of sounds to play for system events
   // Override: none
   "sounds": {
-    "hotword": "snd/start_listening.wav",
     "start_listening": "snd/start_listening.wav",
     "end_listening": "snd/end_listening.wav"
   },
@@ -163,7 +161,7 @@
   // Settings used by the wake-up-word listener
   // Override: REMOTE
   "listener": {
-    // pocketsphinx or snowboy
+    // pocketsphinx config
     "module": "pocketsphinx",
     "wake_up_module": "pocketsphinx",
     "sample_rate": 16000,
@@ -179,6 +177,7 @@
     'standup_phonemes': "W EY K . AH P",
     'standup_threshold': 1e-18,
 
+    // example snowboy config
     //"module": "snowboy",
     //"wake_up_module": "snowboy",
     //"sensitivity": 0.5,
@@ -193,14 +192,16 @@
     //},
 
     // search for these hot words
-    "listen_on_hotword": false, // treat all hot words as wakewords
-    "utterance_on_hotword": false, // treat hot words as full utterances
     'hot_words':{
 
         //"start": {
         //    "module":"snowboy"
         //    "data":{
-        //        "models": {
+        //("sound")
+        //     "sound": "", // play this sound on this hot word
+        //     "utterance": False, // treat this like a full utterance
+        //     "listen": False, // start listening on this hot word
+        //        "models": { // snowboy allows many models to trigger same word
         //              "start": "path/to/model",
         //              "engage": "path/to/model2",
         //          }
@@ -257,7 +258,7 @@
         //      }
         //},
 
-        //"start": {
+        //"start": { // pocket sphinx should also work
         //    "module":"pocketsphinx"
         //    "data":{
         //        "hot_word": "",
