check for language support

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -50,6 +50,7 @@
   // Play a beep when system begins to listen?
   // Override: none
   "confirm_listening": true,
+
   // File locations of sounds to play for system events
   // Override: none
   "sounds": {
@@ -173,9 +174,10 @@
     "threshold": 1e-90,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
-    'standup_word': "wake up",
-    'standup_phonemes': "W EY K . AH P",
-    'standup_threshold': 1e-18,
+
+    "standup_word": "wake up",
+    "standup_phonemes": "W EY K . AH P",
+    "standup_threshold": 1e-18
 
     // example snowboy config
     //"module": "snowboy",
@@ -192,82 +194,23 @@
     //},
 
     // search for these hot words
-    'hot_words':{
-
-        //"start": {
-        //    "module":"snowboy"
-        //    "data":{
-        //("sound")
-        //     "sound": "", // play this sound on this hot word
-        //     "utterance": False, // treat this like a full utterance
-        //     "listen": False, // start listening on this hot word
-        //        "models": { // snowboy allows many models to trigger same word
-        //              "start": "path/to/model",
-        //              "engage": "path/to/model2",
-        //          }
-        //      }
-        //},
-        //"stop": {
-        //    "module":"snowboy"
-        //    "data":{
-        //        "models": {
-        //              "stop": "path/to/model"
-        //          }
-        //      }
-        //},
-        //"yes": {
-        //    "module":"snowboy"
-        //    "data":{
-        //        "models": {
-        //              "yes": "path/to/model",
-        //              "afirmative": "path/to/model2",
-        //          }
-        //      }
-        //},
-        //"no": {
-        //    "module":"snowboy"
-        //    "data":{
-        //        "models": {
-        //              "no": "path/to/model",
-        //              "negative": "path/to/model2",
-        //          }
-        //      }
-        //},
-        //"play": {
-        //    "module":"snowboy"
-        //    "data":{
-        //        "models": {
-        //              "play": "path/to/model"
-        //          }
-        //      }
-        //},
-        //"pause": {
-        //    "module":"snowboy"
-        //    "data":{
-        //        "models": {
-        //              "pause": "path/to/model"
-        //          }
-        //      }
-        //},
-        //"reset": {
-        //    "module":"snowboy"
-        //    "data":{
-        //        "models": {
-        //              "reset": "path/to/model"
-        //          }
-        //      }
-        //},
-
-        //"start": { // pocket sphinx should also work
-        //    "module":"pocketsphinx"
-        //    "data":{
-        //        "hot_word": "",
-        //        "phonemes": "",
-        //        "threshold": 1e-90
-        //    }
-        //    }
-        //}
-    }
+    //'hot_words':{
+    //     "computer":
+    //     {
+    //        "module":"pocketsphinx",
+            // play this sound on this hot word
+    //        "sound": "",
+            // treat this like a full utterance
+    //        "utterance": false,
+            // start listening on this hot word
+    //        "listen": false,
+    //        "data":{
+    //            "hot_word": "computer",
+    //            "phonemes": "",
+    //            "threshold": 1e-90
+    //            }
+    //        }
+    //}
   },
 
   // Mark 1 enclosure settings
@@ -307,7 +250,7 @@
   // Speech to Text parameters
   // Override: REMOTE
   "stt": {
-    // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi"
+    // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi", pocketsphinx
     "module": "wit",
     "wit":{
     "credential" : {"token": ""}
