server client config

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -16,6 +16,17 @@
   // Override: none
   "lang": "en-us",
 
+  // Jarbas Server Settings
+  "jarbas_server": {
+        "port" : 5000, // run server on this port
+        "recv_buffer" : 8192 // advisable to keep as exponent of 2
+  },
+  // Jarbas Client Settings
+  "jarbas_client": {
+        "port" : 5000, // connect to server in this port
+        "host" : "174.59.239.227" // at this ip adress
+  },
+
   // where to save stuff, like dreams and poems
   "database_path" : "./database",
 
