server client config

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -18,13 +18,17 @@
 
   // Jarbas Server Settings
   "jarbas_server": {
-        "port" : 5000, // run server on this port
-        "recv_buffer" : 8192 // advisable to keep as exponent of 2
+        // run server on this port
+         "port" : 5000,
+        // advisable to keep as exponent of 2
+        "recv_buffer" : 8192
   },
   // Jarbas Client Settings
   "jarbas_client": {
-        "port" : 5000, // connect to server in this port
-        "host" : "174.59.239.227" // at this ip adress
+         // connect to server in this port
+         "port" : 5000,
+         // at this ip adress
+         "host" : "174.59.239.227"
   },
 
   // where to save stuff, like dreams and poems
