--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -18,10 +18,13 @@
 
   // Jarbas Server Settings
   "jarbas_server": {
+        // certificate file
+        // "cert_file" : "path/to/cert.crt",
+        // key file
+        // "key_file" : "path/to/cert.key",
         // run server on this port
          "port" : 5000,
-        // advisable to keep as exponent of 2
-        "recv_buffer" : 8192
+         "host": "127.0.0.1"
   },
   // Jarbas Client Settings
   "jarbas_client": {
