fallback oder over-ride

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -129,7 +129,14 @@
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center",
     "service_objectives", "LILACS_core", "LILACS_storage"],
+    // fallback over_ride, ignore user settings and use this order
+    "fallback_override": true,
+    // fallback priority order, try all for this order
+    "fallback_priority" : ["fallback_server", "LILACS_core",
+    "fallback_aiml_chatbot", "fallback_cleverbot", "fallback_padatius"],
+    // run level to be enforced at start up
     "default_run_level" : "full",
+    // run levels
     "run_levels": {
         // core skills only
         "0":{
