--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -19,9 +19,9 @@
   // Jarbas Server Settings
   "jarbas_server": {
         // certificate file
-        // "cert_file" : "path/to/cert.crt",
+        // "cert_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.crt",
         // key file
-        // "key_file" : "path/to/cert.key",
+        // "key_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.key",
         // run server on this port
          "port" : 5000,
          "host": "127.0.0.1"
@@ -35,7 +35,7 @@
   },
 
   // where to save stuff, like dreams and poems
-  "database_path" : "./database",
+  "database_path" : "~/database",
 
   // API keys
   "APIS": {
