--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -22,16 +22,49 @@
         // "cert_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.crt",
         // key file
         // "key_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.key",
+        // pgp key settings to id server
+         "pgp_user": "Jarbas@Jarbas.ai",
+         "pgp_passwd": "'welcome to the mycroft collective",
         // run server on this port
          "port" : 5000,
-         "host": "127.0.0.1"
+         "host": "127.0.0.1",
+        // allow blacklisted or whitelisted ips only
+         "ip_policy": "blacklist",
+         "ip_list": [],
+        // allowed messages, reject message types not in this list
+        "message_policy": "whitelist",
+        "message_list": ["recognizer_loop:utterance",
+                                     "names_response",
+                                     "id_update",
+                                     "incoming_file",
+                                     "vision_result",
+                                     "vision.faces.result",
+                                     "vision.feed.result",
+                                     "deep.dream.request",
+                                     "image.classification.request",
+                                     "style.transfer.request",
+                                     "class.visualization.request",
+                                     "face.recognition.request",
+                                     "object.recognition.request",
+                                     "client.pgp.public.request",
+                                     "client.pgp.public.response",
+                                     "client.aes.exchange_complete"
+                                     ]
   },
   // Jarbas Client Settings
   "jarbas_client": {
          // connect to server in this port
          "port" : 5000,
          // at this ip adress
-         "host" : "174.59.239.227"
+         "host" : "174.59.239.227",
+         // pgp key settings to id server
+         "pgp_user": "Jarbas@Jarbas.ai",
+         "pgp_passwd": "'welcome to the mycroft collective",
+         // client nickname list
+         "client_names": ["jarbas_client"],
+         // block / accept this message types from server
+         "message_policy" : "blacklist",
+         "message_list" : []
   },
 
   // where to save stuff, like dreams and poems
