--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -309,13 +309,17 @@
   // Override: REMOTE
   "stt": {
     // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi", pocketsphinx
-    "module": "wit",
+    "module": "kaldi",
+    "pocketsphinx":{
+        "sample_rate": 16000,
+        "threshold": 1e-90
+        },
     "wit":{
-    "credential" : {"token": ""}
-    },
+        "credential" : {"token": ""}
+        },
     "google":{
-    "credential" : {"token": ""}
-    },
+        "credential" : {"token": ""}
+        },
     "ibm":{
     "credential" : {
         "username": "",
