--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -194,7 +194,8 @@
         // only skills you are working on, dont load unecessary skills for what you are testing
         "dev":{
             "type":"whitelist",
-            "skills":["skill_help", "skill_control_center", "service_RBM"]
+            "skills":["skill_help", "skill_control_center",
+            "objective_dreambot", "service_objectives"]
         }
     }
   },
@@ -309,7 +310,7 @@
   // Override: REMOTE
   "stt": {
     // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi", pocketsphinx
-    "module": "kaldi",
+    "module": "pocketsphinx",
     "pocketsphinx":{
         "sample_rate": 16000,
         "threshold": 1e-90
