--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -68,7 +68,7 @@
   },
 
   // where to save stuff, like dreams and poems
-  "database_path" : "~/database",
+  "database_path" : "/home/user/jarbas_stable/JarbasAI/database",
 
   // API keys
   "APIS": {
@@ -161,7 +161,8 @@
      "service_face_recognition"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help", "skill_control_center",
-    "service_objectives", "LILACS_core", "LILACS_storage"],
+    "service_objectives", "LILACS_core", "LILACS_storage",
+    "skill_playback_control", "skill_display_control"],
     // fallback over_ride, ignore user settings and use this order
     "fallback_override": true,
     // fallback priority order, try all for this order
@@ -195,7 +196,7 @@
         "dev":{
             "type":"whitelist",
             "skills":["skill_help", "skill_control_center",
-            "objective_dreambot", "service_objectives"]
+            "skill_epic", "service_objectives", "skill_display_control"]
         }
     }
   },
@@ -403,8 +404,8 @@
   },
   "Displays": {
     "backends": {
-      "local": {
-        "type": "webbrowser",
+      "opencv": {
+        "type": "opencv",
         "active": true
       },
       "web browser": {
@@ -412,7 +413,7 @@
         "active": true
       }
     },
-    "default-backend": "local"
+    "default-backend": "opencv"
   },
   // =================================================================
   // All of the follow are specific to particular skills and will soon
