toogle hot words on / off

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -254,6 +254,8 @@
              {
                 // this could be pocketsphinx instead
                 "module":"snowboy",
+                // if this field is omitted = True
+                "active": false,
                 // play this sound on this hot word, empty = no sound
                 "sound": "snd/selfdestruct.wav",
                 // treat this like a full utterance
