--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -250,7 +250,7 @@
 
     // search for these hot words
     "hot_words":{
-        "engage self destruct sequence":
+        "self destruct":
              {
                 // this could be pocketsphinx instead
                 "module":"snowboy",
@@ -259,7 +259,7 @@
                 // play this sound on this hot word, empty = no sound
                 "sound": "snd/selfdestruct.wav",
                 // treat this like a full utterance
-                "utterance": true,
+                "utterance": "engage self destruct sequence",
                 // start listening on this hot word
                 "listen": false,
                 "data":{
@@ -277,7 +277,7 @@
             // play this sound on this hot word
             "sound": "snd/dong.wav",
             // treat this like a full utterance
-            "utterance": false,
+            // omited means no
             // start listening on this hot word
             "listen": true,
             "data":{
@@ -293,6 +293,7 @@
             // play this sound on this hot word
             "sound": "snd/ding.wav",
             // treat this like a full utterance
+            // false also means no
             "utterance": false,
             // start listening on this hot word
             "listen": true,
