--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -261,6 +261,7 @@
                 // treat this like a full utterance
                 "utterance": "engage self destruct sequence",
                 // start listening on this hot word
+                // omited means true
                 "listen": false,
                 "data":{
                     // adjust sensitivity
