max server connections

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -22,6 +22,8 @@
         // "cert_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.crt",
         // key file
         // "key_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.key",
+        // max connection number -1 for unlimited
+        "max_connections": -1,
         // pgp key settings to id server
          "pgp_user": "Jarbas@Jarbas.ai",
          "pgp_passwd": "'welcome to the mycroft collective",
