--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -51,7 +51,38 @@
                                      "client.pgp.public.request",
                                      "client.pgp.public.response",
                                      "client.aes.exchange_complete"
-                                     ]
+                                     ],
+        // default blacklisted stuff for new users that connect
+        "forbidden_messages": ["incoming_file",
+                                            "image.classification.request",
+                                            "style.transfer.request",
+                                            "deep.dream.request",
+                                            "class.visualization.request",
+                                            "face.recognition.request",
+                                            "object.recognition.request"],
+        // skill name not folder
+        "forbidden_skills": ["ControlCenterSkill", "LILACSPersonalSkill",
+                            "LILACSTeachSkill", "LILACSUserSkill",
+                            "HotwordSkill", "ClientManagerSkill",
+                            "FeedbackSkill", "TTSSkill", "DreamBotSkill",
+                            "DisplayControlSkill", "DesktopLauncherSkill",
+                            "DreamService", "FaceRecognitionSkill",
+                            "ImageRecognitionSkill", "ObjectRecognitionSkill",
+                            "StyleTransferSkill", "VisionSkill", "AlarmSkill",
+                            "AudioRecordSkill", "ReminderSkill", "DictationSkill"
+                            ],
+        "forbidden_intents": ["IpIntent", "UpdateLocationIntent",
+                              "FollowUserIntent",
+                              "UnFollowUserIntent",
+                              "PostTweetIntent",
+                              "FbLikeRandomPhotoIntent",
+                              "FbAddSuggestedFriendIntent",
+                              "FbAddFriendsofFriendsIntent",
+                              "FbBuildAboutMeIntent",
+                              "FbLastOnlineIntent",
+                              "FbChatPersonIntent",
+                              "FbLikePhotosofPersonIntent"
+                              ]
   },
   // Jarbas Client Settings
   "jarbas_client": {
