black and white photo colorize

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -69,7 +69,8 @@
                             "DreamService", "FaceRecognitionSkill",
                             "ImageRecognitionSkill", "ObjectRecognitionSkill",
                             "StyleTransferSkill", "VisionSkill", "AlarmSkill",
-                            "AudioRecordSkill", "ReminderSkill", "DictationSkill"
+                            "AudioRecordSkill", "ReminderSkill",
+                            "DictationSkill", "ColorizationService"
                             ],
         "forbidden_intents": ["IpIntent", "UpdateLocationIntent",
                               "FollowUserIntent",
