--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -306,6 +306,24 @@
                         }
                 }
             },
+        "thank you":
+             {
+                // this could be pocketsphinx instead
+                "module":"snowboy",
+                // treat this like a full utterance
+                "utterance": "thank you",
+                // start listening on this hot word
+                // omited means true
+                "listen": false,
+                "data":{
+                    // adjust sensitivity
+                    "sensitivity": 0.35,
+                    // full model path or model file name if in default path
+                    "models": {
+                            "thank you": "thank you.pmdl"
+                        }
+                }
+            },
         "mycroft":
          {
             "module":"snowboy",
