--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -90,7 +90,7 @@
          // connect to server in this port
          "port" : 5000,
          // at this ip adress
-         "host" : "174.59.239.227",
+         "host" : "98.29.104.152",
          // pgp key settings to id server
          "pgp_user": "Jarbas@Jarbas.ai",
          "pgp_passwd": "'welcome to the mycroft collective",
@@ -106,18 +106,27 @@
 
   // API keys
   "APIS": {
-    "WolframAlphaAPI": "key",
-    "WeatherAPI": "key",
-    "GraphAPI": "key",
-    "NASAAPI": "DEMO_KEY",
-    "GoogleTrafficAPI": "key",
-    "MashapeAPI": "key",
-    "WikimapiaAPI": "key",
-    "CloudsightAPI": "key",
-    "RedditAPI": "key",
-    "CloudsightSecret": "key",
-    "RedditSecret": "key",
-    "Wordnik":"key"
+    // Mycroft-core Skills
+    "WolframAlpha": "",
+    "Weather": "",
+    // TTS Engines
+    "snowboy": "",
+    // Skills
+    "NASA": "DEMO_KEY",
+    "GoogleTraffic": "",
+    "Mashape": "",
+    "Wikimapia": "",
+    "Cloudsight": "",
+    "Reddit": "",
+    "Wordnik":"",
+    "Cleverbot": "",
+    "Twitter_consumer_key": "",
+    "Twitter_consumer_secret": "",
+    "Twitter_access_token": "",
+    "Twitter_access_secret": "",
+    "CloudsightSecret": "",
+    "RedditSecret": ""
+
   },
 
   // Measurement units, either 'metric' or 'english'
