--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -203,8 +203,9 @@
      "service_style_transfer", "LILACS_core",
      "service_face_recognition"],
     // priority skills to be loaded first
-    "priority_skills": ["skill_help", "skill_control_center",
-    "service_objectives", "LILACS_core", "LILACS_storage",
+    "priority_skills": ["skill_help",
+    "skill_control_center", "service_client_manager"
+    "service_objectives", "LILACS_storage", "LILACS_core",
     "skill_playback_control", "skill_display_control"],
     // fallback over_ride, ignore user settings and use this order
     "fallback_override": true,
