--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -204,7 +204,7 @@
      "service_face_recognition"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help",
-    "skill_control_center", "service_client_manager"
+    "skill_control_center", "service_client_manager",
     "service_objectives", "LILACS_storage", "LILACS_core",
     "skill_playback_control", "skill_display_control"],
     // fallback over_ride, ignore user settings and use this order
