--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -195,7 +195,7 @@
     // Directory to look for user skills
     "directory": "~/.mycroft/skills",
      // blacklisted skills to not load
-    "blacklisted_skills": ["skill_server_fallback",
+    "blacklisted_skills": ["fallback_server",
     "service_vision", "LILACS_curiosity",
     "LILACS_users", "LILACS_teach", "service_deep_dream",
     "service_image_recognition", "service_object_recognition",
