--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -16,6 +16,11 @@
   // Override: none
   "lang": "en-us",
 
+  // webchat client
+  "webchat":{
+        "port": 4123
+  },
+
   // Jarbas Server Settings
   "jarbas_server": {
         // certificate file
