--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -18,7 +18,12 @@
 
   // webchat client
   "webchat":{
-        "port": 4123
+        "port": 4113,
+        // ssl is not fully working
+        "ssl": false,
+        "max_connections": -1
+        //"cert_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.crt",
+        // "key_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.key",
   },
 
   // Jarbas Server Settings
@@ -197,8 +202,8 @@
   // General skill values
   // Override: none
   "skills": {
-    // Directory to look for user skills
-    "directory": "~/.mycroft/skills",
+    // Directory to look for skills
+    "directory": "default",
      // blacklisted skills to not load
     "blacklisted_skills": ["fallback_server",
     "service_vision", "LILACS_curiosity",
