--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -18,7 +18,7 @@
 
   // webchat client
   "webchat":{
-        "port": 4113,
+        "port": 4666,
         // ssl is not fully working
         "ssl": false,
         "max_connections": -1
@@ -226,31 +226,21 @@
     "default_run_level" : "full",
     // run levels
     "run_levels": {
-        // core skills only
+        // no skills
         "0":{
             "type":"whitelist",
             "skills": []
-        },
-        // full LILACS
-        "lilacs":{
-            "type":"whitelist",
-            "skills":["LILACS_core", "LILACS_knowledge", "LILACS_storage", "LILACS_rhymes","LILACS_teach", "LILACS_chatbot", "LILACS_curiosity"]
         },
         // all skills
         "full":{
             "type":"blacklist",
             "skills":[]
         },
-        // censor some skills (facebook client, dont allow desktop launcher)
-        "restricted":{
-            "type":"blacklist",
-            "skills":["service_face", "skill_desktop_launcher", "skill_mute", "skill_dictation", "service_display", "service_audio", "service_vision", "skill_audio_record", "LILACS_teach", "skill_configuration", "skill_pairing", "skill_diagnostics","skill_deep_dream", "skill_control_center", "skill_cmd", "skill_wallpaper", "skill_reminder", "skill_alarm", "skill_playback_control", "skill_naptime"]
-        },
         // only skills you are working on, dont load unecessary skills for what you are testing
         "dev":{
             "type":"whitelist",
             "skills":["skill_help", "skill_control_center",
-            "skill_epic", "service_objectives", "skill_display_control"]
+            "skill_epic", "skill_display_control"]
         }
     }
   },
