--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -19,6 +19,10 @@
   // webchat client
   "webchat":{
         "port": 4666,
+        // print all speech, or only answers to stuff from webchat
+        "all_speech": false,
+        // mute speak messages
+        "mute_speech": true,
         // ssl is not fully working
         "ssl": false,
         "max_connections": -1
