--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -215,7 +215,9 @@
     "service_image_recognition", "service_object_recognition",
     "skill_twitter", "skill_facebook", "skill_instagram", "service_colorize",
      "service_style_transfer", "LILACS_core",
-     "service_face_recognition"],
+     "service_face_recognition", "service_browser", "service_client_manager",
+     "service_porn_detection", "service_RBM", "service_vision",
+     "objective_dreambot"],
     // priority skills to be loaded first
     "priority_skills": ["skill_help",
     "skill_control_center", "service_client_manager",
@@ -412,7 +414,7 @@
   // Override: REMOTE
   "stt": {
     // Engine.  Options: "mycroft", "google", "wit", "ibm", "kaldi", pocketsphinx
-    "module": "ibm",
+    "module": "pocketsphinx",
     "pocketsphinx":{
         "sample_rate": 16000,
         "threshold": 1e-90
