more default skills

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -491,28 +491,32 @@
   // All of the follow are specific to particular skills and will soon
   // be removed from this file.
   // =================================================================
-
-  "wifi": {
-    "setup": false
+  "EventSkill": {
+    "status update": {
+        "actions": [{"TimeIntent": {}},
+                    {"CurrentWeatherIntent": {}}
+        ]
+    },
+    "wakeup": {
+        "actions": [
+          {"SpeakIntent": {"Words": "Good morning Sunshine"}},
+          {"TimeIntent": {}},
+          {"CurrentWeatherIntent": {}},
+          {"NextDayWeatherIntent": {}},
+          {"NewsIntent": {"NewsSource": "fox"}}
+      ],
+      "time": "06:45"
+    }
   },
-  "ConfigurationSkill": {
-    "max_delay": 60
-  },
-  "WikipediaSkill": {
-    "max_results": 5,
-    "max_phrases": 2
-  },
-  "WolframAlphaSkill": {
-    "api_key": "",
-    "proxy": true
+  "CmdSkill": {
+      "alias": {
+        "generate report": "/home/forslund/scripts/generate_report.sh"
+      }
   },
   "WeatherSkill": {
     "api_key": "",
     "proxy": true,
     "temperature": "fahrenheit"
-  },
-  "NPRNewsSkill": {
-    "url_rss": "http://www.npr.org/rss/podcast.php?id=500005"
   },
   "AlarmSkill": {
     "filename": "alarm.mp3",
@@ -531,20 +535,11 @@
     "max_volume": 100
   },
   "AudioRecordSkill": {
-    "filename": "/tmp/mycroft-recording.wav",
+    "filename": "/tmp/jarbas-recording.wav",
     "free_disk": 100,
     "max_time": 600,
     "notify_delay": 5,
     "rate": 16000,
     "channels": 1
-  },
-  "SkillInstallerSkill": {
-  },
-  "TwitterSkill": {
-    "consumer_key": "",
-    "consumer_secret": "",
-    "access_token": "",
-    "access_secret": "",
-    "twitter_user": ""
   }
 }
