--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -19,13 +19,17 @@
   // webchat client
   "webchat":{
         "port": 4666,
+        // operation mode, client or log
+        // log prints all bus messages
+        "mode": "log",
         // print all speech, or only answers to stuff from webchat
         "all_speech": false,
         // mute speak messages
         "mute_speech": true,
+        // -1 for unlimited connections
+        "max_connections": -1,
         // ssl is not fully working
-        "ssl": false,
-        "max_connections": -1
+        "ssl": false
         //"cert_file" : "~/JarbasAI/mycroft/client/webchat/certs/certificate.crt",
         //"key_file" : "~/JarbasAI/mycroft/client/webchat/certs/certificate.key",
   },
