--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -545,5 +545,14 @@
     "notify_delay": 5,
     "rate": 16000,
     "channels": 1
+  },
+  "SkillInstallerSkill": {
+  },
+  "TwitterSkill": {
+    "consumer_key": "",
+    "consumer_secret": "",
+    "access_token": "",
+    "access_secret": "",
+    "twitter_user": ""
   }
 }
