--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -444,9 +444,9 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic"
-    "module": "mimic",
+    "module": "pymimic",
     "pymimic": {
-      "voice": "/your_path_to/mimic/voices/cmu_us_awb.flitevox"
+      "voice": "../../mycroft_voice_4.0.flitevox"
     },
     "mimic": {
       "voice": "ap"
