--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -21,7 +21,7 @@
         "port": 4666,
         // operation mode, client or log
         // log prints all bus messages
-        "mode": "log",
+        "mode": "client",
         // print all speech, or only answers to stuff from webchat
         "all_speech": false,
         // mute speak messages
@@ -290,7 +290,7 @@
     "threshold": 1e-90,
     "standup_word": "wake up",
     "standup_phonemes": "W EY K . AH P",
-    "standup_threshold": 1e-18,
+    "standup_threshold": 1e-20,
 
     // snowboy config
     "sensitivity": 0.42,
@@ -337,7 +337,7 @@
                 "listen": false,
                 "data":{
                     // adjust sensitivity
-                    "sensitivity": 0.35,
+                    "sensitivity": 0.30,
                     // full model path or model file name if in default path
                     "models": {
                             "thank you": "thank you.pmdl"
